--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Josh Verdejo's Site</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am currently a student pursuing Electrical Engineering and Computer Science degrees from MIT.</p>
   </body>
 </html>
