Wallpaper, updated name

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html>
   <head>
     <title>Josh Verdejo's Site</title>
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am currently a student pursuing Electrical Engineering and Computer Science degrees from MIT.</p>
+    <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am student at MIT pursuing Electrical Engineering and Computer Science degrees.</p>
   </body>
 </html>
