Wallpaper, updated name

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
+  	 <nav>
+    <div class="dropdown"style="float:right;">
+      <button class="dropbtn">Menu</button>
+      <div class="dropdown-content">
+      <ul id="navigation">
+        <li><a href="/">Home</a></li>
+      </ul>
+      </div>
+    </div>
+    </nav>
     <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am student at MIT pursuing Electrical Engineering and Computer Science degrees.</p>
   </body>
 </html>
