--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CodeU 2019 Starter Project</title>
+    <title>Josh Verdejo's Site</title>
     <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
-    <nav>
+  	 <nav>
     <div class="dropdown"style="float:right;">
       <button class="dropbtn">Menu</button>
       <div class="dropdown-content">
@@ -15,8 +16,6 @@
       </div>
     </div>
     </nav>
-    <h1>Team 20: Abroad</h1>
-    <h1>Welcome to a new way to experience life, all around the world, from the palm of your hand.</h1>  
-    <p>Created by: Lauren, Adrian, Joshua, Emily</p>  
+    <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am student at MIT pursuing Electrical Engineering and Computer Science degrees.</p>
   </body>
 </html>
