--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Josh Verdejo's Site</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
   	 <nav>
