--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
     </div>
     </nav>
+    <h1>Joshua Verdejo's Website</h1>
     <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am student at MIT pursuing Electrical Engineering and Computer Science degrees.</p>
   </body>
 </html>
