--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Josh Verdejo's Site</title>
-    <link rel="stylesheet" href="css/main.css">
-  </head>
-  <body>
-  	 <nav>
-    <div class="dropdown"style="float:right;">
-      <button class="dropbtn">Menu</button>
-      <div class="dropdown-content">
-      <ul id="navigation">
-        <li><a href="/">Home</a></li>
-      </ul>
-      </div>
-    </div>
-    </nav>
-    <h1>Joshua Verdejo's Website</h1>
-    <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am student at MIT pursuing Electrical Engineering and Computer Science degrees.</p>
-  </body>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<h1>Joshua Verdejo</h1>
+<p>This is my website.</p>
+
+</body>
 </html>
