--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-<h1>Joshua Verdejo</h1>
-<p>This is my website.</p>
-
-</body>
+  <head>
+    <title>Josh Verdejo's Site</title>
+    <link rel="stylesheet" href="css/main.css"/>
+  </head>
+  <body>
+  
+    <h1>Joshua Verdejo's Website</h1>
+    <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am student at MIT pursuing Electrical Engineering and Computer Science degrees.</p>
+    
+  </body>
 </html>
