--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <html>
   <head>
     <title>Josh Verdejo's Site</title>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
   
-    <h1>Joshua Verdejo's Website</h1>
-    <p>Welcome to my Website! My name is <strong>Josh Verdejo</strong>, I am student at MIT pursuing Electrical Engineering and Computer Science degrees.</p>
+    <h1>Joshua Verdejo</h1>
+    <p>My name is <strong>Josh Verdejo</strong>, I am <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
+   <h2>Projects | Info | Contact<h2/>
     
   </body>
 </html>
