--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,7 +9,6 @@
   
     <h1>Joshua Verdejo</h1>
     <p>My name is <strong>Josh Verdejo</strong>, I am <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
-   <h2>Projects  |  Info  |  Contact<h2/>
-    
+   <h2> <inline style = "color: blue">Projects</inline> | <inline style = "color: red">About</inline> | <inline style = "color: green">Contact</inline></h2>
   </body>
 </html>
