--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <body>
   
     <h1>Joshua Verdejo</h1>
-    <p>My name is <strong>Josh Verdejo</strong>, I am <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
-   <h2> <inline style = "color: blue">Projects</inline> | <inline style = "color: red">About</inline> | <inline style = "color: green">Contact</inline></h2>
+    <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
+   <div>
+    <h2> <inline style = "color: blue", class = "project">Projects</inline> | <inline style = "color: red", class = "about">About</inline> | <inline style = "color: green", id = "contact">Contact</inline></h2>
+    </div>
+    
   </body>
 </html>
