--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
-  
     <h1>Joshua Verdejo</h1>
     <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
-   <div>
-    <h2> <inline style = "color: blue", class = "project">Projects</inline> | <inline style = "color: red", class = "about">About</inline> | <inline style = "color: green", id = "contact">Contact</inline></h2>
-    </div>
+
+ <h2> <inline style = "color: blue", class = "project">Projects</h2></inline> <h3><inline style = "color: red", class = "about">About</inline> </h3><h4><inline style = "color: green", class = "contact">Contact</inline></h4>
+ <div class="bg"></div>
     
   </body>
 </html>
