--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <title>Josh Verdejo's Site</title>
@@ -13,4 +13,67 @@
  <div class="bg"></div>
     
   </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Josh Verdejo's Site</title>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link rel="stylesheet" href="css/main.css"/>
+    <script src="SwipeAnimation.js"></script>
+
+  </head>
+<div class="heading">Scroll to see more</div>
+<div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="container-general">
+            <div class="gallery-wrap wrap-effect-1">
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="container-general">
+            <div class="gallery-wrap wrap-effect-2">
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="container-general">
+            <div class="gallery-wrap wrap-effect-3">
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="container-general wrap-effect-4">
+            <div class="gallery-wrap">
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+              <div class="item"></div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+            Inspired by Galshir arts, created by me. Thank you.
+        </div>
+      </div>
+    </div>
 </html>
