--- a/index.html
+++ b/index.html
@@ -1,79 +1,21 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Josh Verdejo's Site</title>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="stylesheet" href="css/main.css"/>
   </head>
-  <body>
+  <body align = "center">
     <h1>Joshua Verdejo</h1>
     <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
 
- <h2> <inline style = "color: blue", class = "project">Projects</h2></inline> <h3><inline style = "color: red", class = "about">About</inline> </h3><h4><inline style = "color: green", class = "contact">Contact</inline></h4>
- <div class="bg"></div>
+<h2>
+<div>
+<a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
+<a href="http://joshuaverdejo.com/about", type= "button", class="about_button title_button">About</a>
+<a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
+</h2>
+</div>
     
   </body>
-</html> -->
-
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Josh Verdejo's Site</title>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-    <link rel="stylesheet" href="css/main.css"/>
-    <script src="SwipeAnimation.js"></script>
-
-  </head>
-<div class="heading">Scroll to see more</div>
-<div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <div class="container-general">
-            <div class="gallery-wrap wrap-effect-1">
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="container-general">
-            <div class="gallery-wrap wrap-effect-2">
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="container-general">
-            <div class="gallery-wrap wrap-effect-3">
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="container-general wrap-effect-4">
-            <div class="gallery-wrap">
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-              <div class="item"></div>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-            Inspired by Galshir arts, created by me. Thank you.
-        </div>
-      </div>
-    </div>
 </html>
