fixing about page

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <h2>
 <div>
 <a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
-<a href="http://joshuaverdejo.com/about", type= "button", class="about_button title_button">About</a>
+<a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
 </h2>
 </div>
     
