--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 
 <h2>
 <div>
-<a href="http://joshuaverdejo.com/about", type= "button", class="about_button title_button">About</a>
+<a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
 <a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
 </h2>
 </div>
