Adding social media link buttons

--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Josh Verdejo's Site</title>
+    <title>JV: Contact</title>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body align = "center">
-    <h1>Joshua Verdejo</h1>
-    <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
-
+    <h1>Contact Me</h1>
 <h2>
 <div>
 <a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
 <a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
 </h2>
+</div>
+
+<div>
+  <a href="mailto:joverdejo@gmail.com"><img src="mailIcon.png" width="100" height="100" alt="Email"></a>
+  <a href="https://www.bit.ly/jover-linkedin"><img src="linkedinIcon.png" width="100" height="100" alt="LinkedIn"></a>
+  <a href="https://www.instagram.com/jov.er/"><img src="instagramIcon.png" width="100" height="100" alt="Instagram"></a>
 </div>
     
   </body>
