--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,9 @@
 </div>
 
 <div>
-  <a href="mailto:joverdejo@gmail.com"><img src="mailIcon.png" width="100" height="100" alt="Email"></a>
-  <a href="https://www.bit.ly/jover-linkedin"><img src="linkedinIcon.png" width="100" height="100" alt="LinkedIn"></a>
-  <a href="https://www.instagram.com/jov.er/"><img src="instagramIcon.png" width="100" height="100" alt="Instagram"></a>
+  <a href="mailto:joverdejo@gmail.com"><img src="css/mailIcon.png" width="100" height="100" alt="Email"></a>
+  <a href="https://www.bit.ly/jover-linkedin"><img src="css/linkedinIcon.png" width="100" height="100" alt="LinkedIn"></a>
+  <a href="https://www.instagram.com/jov.er/"><img src="css/instagramIcon.png" width="100" height="100" alt="Instagram"></a>
 </div>
     
   </body>
