Adding social media link images 2

--- a/contact.html
+++ b/contact.html
@@ -6,19 +6,20 @@
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body align = "center">
-    <h1>Contact Me</h1>
+    <h1>Contact</h1>
 <h2>
 <div>
 <a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
 <a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
 </h2>
 </div>
-
+See a way to make this better? Want to reach out for business inquiries? Just reaching out to say hello? Send a message!
 <div>
-  <a href="mailto:joverdejo@gmail.com"><img src="css/mailIcon.png" width="100" height="100" alt="Email"></a>
-  <a href="https://www.bit.ly/jover-linkedin"><img src="css/linkedinIcon.png" width="100" height="100" alt="LinkedIn"></a>
-  <a href="https://www.instagram.com/jov.er/"><img src="css/instagramIcon.png" width="100" height="100" alt="Instagram"></a>
+  <a href="mailto:joverdejo@gmail.com"><img src="/css/mailIcon.png" width="100" height="100" alt="Email"></a>
+  <a href="https://www.bit.ly/jover-linkedin"><img src="/css/linkedinIcon.png" width="100" height="100" alt="LinkedIn"></a>
+  <a href="https://www.instagram.com/jov.er/"><img src="/css/instagramIcon.png" width="100" height="100" alt="Instagram"></a>
 </div>
-    
+   
+   
   </body>
 </html>
