--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,13 @@
   </head>
   <body align = "center">
     <h1>Contact</h1>
+See a way to improve this site? Want to reach out for business inquiries? Just want to hello? Send a message!
 <h2>
 <div>
 <a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
 <a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
 </h2>
 </div>
-See a way to make this better? Want to reach out for business inquiries? Just reaching out to say hello? Send a message!
 <div>
   <a href="mailto:joverdejo@gmail.com"><img src="/css/mailIcon.png" width="200" height="200" alt="Email"></a>
   <a href="https://www.bit.ly/jover-linkedin"><img src="/css/linkedinIcon.png" width="200" height="200" alt="LinkedIn"></a>
