First round of project content

--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@
   </head>
   <body align = "center">
     <h1>Joshua Verdejo</h1>
-    <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
+    I am passionate about computer science as well as music.
 
 <h2>
 <div>
