--- a/projects.html
+++ b/projects.html
@@ -6,15 +6,21 @@
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body align = "center">
-    <h1>Joshua Verdejo</h1>
-    <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
-
+    <h1>Projects</h1>
+A showcase of some of the projects I have created or am currently working on.
+https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq
 <h2>
 <div>
 <a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
 <a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
 </h2>
 </div>
-    
+
+<div>
+  <a href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq"><img src="/css/brainIcon.png" width="150" height="150" alt="BCI Controlled Swarm Robotics"></a>
+  <a href="https://www.bit.ly/jover-linkedin"><img src="/css/githubIcon.png" width="150" height="150" alt="Website GitHub Repository"></a>
+  <a href="https://sites.google.com/view/lassiereport/home"><img src="/css/lassieIcon.png" width="150" height="150" alt="Lassie Robot"></a>
+</div>
+
   </body>
 </html>
