--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@ https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq
 
 <div>
   <a href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq"><img src="/css/brainIcon.png" width="150" height="150" alt="BCI Controlled Swarm Robotics"></a>
-  <a href="https://www.bit.ly/jover-linkedin"><img src="/css/githubIcon.png" width="150" height="150" alt="Website GitHub Repository"></a>
+  <a href="https://github.com/joverdejo/joverdejo.github.io"><img src="/css/githubIcon.png" width="150" height="150" alt="Website GitHub Repository"></a>
   <a href="https://sites.google.com/view/lassiereport/home"><img src="/css/lassieIcon.png" width="150" height="150" alt="Lassie Robot"></a>
 </div>
 
