--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,6 @@
   <body align = "center">
     <h1>Projects</h1>
 A showcase of some of the projects I have created or am currently working on.
-https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq
 <h2>
 <div>
 <a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
@@ -17,7 +16,7 @@ https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq
 </div>
 
 <div>
-  <a href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq"><img src="/css/brainIcon.png" width="150" height="150" alt="BCI Controlled Swarm Robotics"></a>
+  <a href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq"><img src="/css/bciIcon.png" width="150" height="150" alt="BCI Controlled Swarm Robotics"></a>
   <a href="https://github.com/joverdejo/joverdejo.github.io"><img src="/css/githubIcon.png" width="150" height="150" alt="Website GitHub Repository"></a>
   <a href="https://sites.google.com/view/lassiereport/home"><img src="/css/lassieIcon.png" width="150" height="150" alt="Lassie Robot"></a>
 </div>
