Changing order and format of buttons 1

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+ <h2>
+<div>
+<a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
+<a href="http://joshuaverdejo.com", type= "button", class="contact_button title_button">Home</a>
+<a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
+
+</h2>
+</div>
   <head>
     <title>JV: Contact</title>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
@@ -8,12 +16,7 @@
   <body align = "center">
     <h1>Contact</h1>
 See a way to improve this site? Want to reach out for business inquiries? Just want to hello? Send a message!
-<h2>
-<div>
-<a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
-<a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
-</h2>
-</div>
+
 <div>
   <a href="mailto:joverdejo@gmail.com"><img src="/css/mailIcon.png" width="150" height="150" alt="Email"></a>
   <a href="https://www.bit.ly/jover-linkedin"><img src="/css/linkedinIcon.png" width="150" height="150" alt="LinkedIn"></a>
