--- a/info.html
+++ b/info.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <h2>
+<div>
+<a href="http://joshuaverdejo.com", type= "button", class="about_button title_button">Home</a>
+<a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
+<a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
+</h2>
+</div>
+    
   <head>
     <title>JV: About</title>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
@@ -9,12 +17,6 @@
     <h1>Joshua Verdejo</h1>
     I am passionate about computer science as well as music.
 
-<h2>
-<div>
-<a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
-<a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
-</h2>
-</div>
-    
+
   </body>
 </html>
