--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<h2>
+<div>
+<a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
+<a href="http://joshuaverdejo.com", type= "button", class="projects_button title_button">Home</a>
+<a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
+</h2>
+</div>
   <head>
     <title>JV: Projects</title>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
@@ -8,12 +15,7 @@
   <body align = "center">
     <h1>Projects</h1>
 A showcase of some of the projects I have created or am currently working on.
-<h2>
-<div>
-<a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
-<a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
-</h2>
-</div>
+
 
 <div>
   <a href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq"><img src="/css/bciIcon.png" width="150" height="150" alt="BCI Controlled Swarm Robotics"></a>
