--- a/info.html
+++ b/info.html
@@ -19,5 +19,9 @@
     I am passionate about computer science as well as music.
 </h4>
 
+<div>
+   <a href="/css/VerdejoResume.pdf"><img src="/css/resumeIcon.png" width="150" height="150" alt="Resume">Resume</a>
+</div>
+
   </body>
 </html>
