Adding font to all tiles

--- a/projects.html
+++ b/projects.html
@@ -19,9 +19,9 @@ A showcase of some of the projects I have created or am currently working on.
 </h4>
 
 <div>
-  <a href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq"><img src="/css/bciIcon.png" width="150" height="150" alt="BCI Controlled Swarm Robotics"></a>
-  <a href="https://github.com/joverdejo/joverdejo.github.io"><img src="/css/githubIcon.png" width="150" height="150" alt="Website GitHub Repository"></a>
-  <a href="https://sites.google.com/view/lassiereport/home"><img src="/css/lassieIcon.png" width="150" height="150" alt="Lassie Robot"></a>
+  <a href="https://www.youtube.com/playlist?list=PL8CxV3ShMq0Z34DcwOvDCD4o-epDxOfAq"><img src="/css/bciIcon.png" width="150" height="150" alt="BCI Controlled Swarm Robotics">Brain Controlled Robots</a>
+  <a href="https://github.com/joverdejo/joverdejo.github.io"><img src="/css/githubIcon.png" width="150" height="150" alt="Website GitHub Repository">Personal Website</a>
+  <a href="https://sites.google.com/view/lassiereport/home"><img src="/css/lassieIcon.png" width="150" height="150" alt="Lassie Robot">Cost-Efficient Rescue Bot</a>
 </div>
 
   </body>
