--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 		c3.91,0,6.91-3.58,9.03-10.75C1159.07,128.13,1160.18,118.15,1160.18,105.38z"/>
   	</clipPath>
 
-
   </defs>
 </svg>
+
 	<div class="video-container">
-		<video loop muted autoplay playsinline>
+		<video loop autoplay muted playsinline>
   			<source src="/css/VidOcean.mp4" type="video/mp4">
 		</video>
 	</div>
