--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
   </defs>
 </svg>
 
-<div class="video-container">
-	<video loop autoplay muted playsinline>
-		<source src="/css/VidUniverse.mp4" type="video/mp4">
-	</video>
-</div>
+	<div class="video-container">
+		<video loop autoplay muted playsinline>
+  			<source src="/css/VidInk.mp4" type="video/mp4">
+		</video>
+	</div>
 
 </html>
