--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <title>Personal Site</title>
-  <link rel="stylesheet" href="css/main.css"/>    
+  <head>
+    <title>Personal Site</title>
+    <link rel="stylesheet" href="css/main.css"/>    
+  </head>
+
 	<svg class="clipping-paths">
   <defs>
   	<clipPath id="clip-00" clipPathUnits="objectBoundingBox" transform="scale(0.00083333333, 0.004)">
@@ -53,7 +56,7 @@
 
 	<div class="video-container">
 		<video loop autoplay muted playsinline>
-  			<source src="/css/VidInk.mp4" type="video/mp4">
+  			<source src="/css/VidUniverse.mp4" type="video/mp4">
 		</video>
 	</div>
 
