--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Personal Site</title>
-    <link rel="stylesheet" href="css/main.css"/>    
+    <link rel="stylesheet" href="/css/main.css"/>    
   </head>
 
 	<svg class="clipping-paths">
@@ -56,7 +56,7 @@
 
 	<div class="video-container">
 		<video loop autoplay muted playsinline>
-  			<source src="/css/VidUniverse.mp4" type="video/mp4">
+  			<source src="/css/VidOcean.mp4" type="video/mp4">
 		</video>
 	</div>
 
