--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 	<div class="video-container">
 		<video loop autoplay muted playsinline>
-  			<source src="/css/VidUniverse.mp4" type="video/mp4">
+  			<source src="/css/VidInk.mp4" type="video/mp4">
 		</video>
 	</div>
 
