--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+  
+  <head>
+    <title>Personal Site</title>
+    <link rel="stylesheet" href="css/main.css"/>    
+  </head>
+
 <body class="dark-theme">
 
     <div class="video-background">
@@ -18,3 +26,4 @@
     <script src="/js/main.js"></script>
 
 </body>
+</html>
