--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
         <div class="video-foreground">
 
-            <iframe src="https://www.youtube.com/embed/bog4VzMWP20?controls=0&showinfo=0&rel=0&autoplay=1&loop=1&mute=1&playlist=bog4VzMWP20" frameborder="0" allowfullscreen tabindex="-1"></iframe>
+            <video loop autoplay muted playsinline>
+  				<source src="/css/VidOcean.mp4" type="video/mp4">
+			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
 
