Video intro alternate debugging

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <meta name=”viewport” content=”width=device-width, initial-scale=1″>
-
 
   <head>
     <title>Personal Site</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/main.css"/>    
   </head>
 
