--- a/home.html
+++ b/home.html
@@ -11,9 +11,10 @@
 </div>
 
   <head>
-    <title>JV: Home</title>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <title>Personal Site</title>
     <link rel="stylesheet" href="css/main.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    
   </head>
   <body align = "center">
     <h1>Joshua Verdejo</h1>
