--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Personal Site</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <link rel="stylesheet" href="css/main.css"/>    
   </head>
 
