Video intro debugging

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="video-foreground">
 
             <video loop autoplay muted playsinline>
-  				<source src="/css/VidOcean.mp4" type="video/mp4">
+  				<source src="/css/VidUniverse.mp4" type="video/mp4">
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
