--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
         <div class="video-foreground">
 
-            <video loop autoplay muted playsinline>
-  				<source src="/css/VidSea.mp4" type="video/mp4">
+            <video autoplay loop muted playsinline>
+  				<source src="/css/VidUniverse.mp4" type="video/mp4">
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
