Intro: changing light/dark mode button

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     </div>
 
-    <button class="theme-btn">Switch to <span class="theme-type">Light</span> Theme</button>
-
+    <button class="theme-btn"> <span class="theme-type"></span> </button>
+    
     <!-- External JavaScript File -->
     <script src="/js/main.js"></script>
 
