Video intro debugging

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="video-foreground">
 
             <video autoplay loop muted playsinline>
-  				<source src="/css/VidKaleidoscope.mp4" type="video/mp4">
+  				<source src="/css/VidOcean.mp4" type="video/mp4">
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
@@ -24,7 +24,7 @@
     </div>
 
     <button class="theme-btn"> <span class="theme-type"></span> </button>
-    
+
     <!-- External JavaScript File -->
     <script src="/js/main.js"></script>
 
