Video intro debugging

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
-            <h1 class = "detail-text">(site currently under construction)</h1>  
+            <h1 class = "detail-text">(site under construction)</h1>  
         </div>
 
     </div>
