--- a/index.html
+++ b/index.html
@@ -7,26 +7,9 @@
     <link rel="stylesheet" href="css/main.css"/>    
   </head>
 
-<body class="dark-theme">
-
-    <div class="video-background">
-
-        <div class="video-foreground">
-
-            <video autoplay loop muted playsinline>
-  				<source src="/css/VidOcean.mp4" type="video/mp4">
-			</video>
-
-            <h1 class="knockout-text">joshua verdejo</h1>
-            <h1 class = "detail-text">(site under construction)</h1>  
-        </div>
-
-    </div>
-
-    <button class="theme-btn"> <span class="theme-type"></span> </button>
-
-    <!-- External JavaScript File -->
-    <script src="/js/main.js"></script>
-
-</body>
+<main>
+  <div class="text">
+    joshua verdejo
+  </div>
+</main>
 </html>
