--- a/home.html
+++ b/home.html
@@ -16,10 +16,14 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
     
   </head>
-  <body align = "center">
+  <body align = "center" class="dark-theme">
     <h1>Joshua Verdejo</h1>
     <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
 
     
   </body>
+<button class="theme-btn"> <span class="theme-type"></span> </button>
+    <!-- External JavaScript File -->
+    <script src="/js/main.js"></script>
+
 </html>
