Home page navigation

--- a/home.html
+++ b/home.html
@@ -11,13 +11,12 @@
 </div>
 
   <head>
-    <title>Personal Site</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/main.css"/>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-    
   </head>
-  <body align = "center" class="dark-theme">
-    <h1>Joshua Verdejo</h1>
+
+  <body class="dark-theme">
+    <h1 class = "name">Joshua Verdejo</h1>
     <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
 
     
