Home page navigation

--- a/home.html
+++ b/home.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html>
 
-<h2>
+
 <div>
-<a href="http://joshuaverdejo.com/info", type= "button", class="about_button title_button">About</a>
-<a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
-<a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
-<a href="http://joshuaverdejo.com/info", type= "button", class="home_button title_button">Home</a>
-</h2>
+<a href="http://joshuaverdejo.com/info", type= "button" class= "nav-button" id = "one">About</a>
+<a href="http://joshuaverdejo.com/projects", type= "button" class= "nav-button" id = "two">Projects</a>
+<a href="http://joshuaverdejo.com/contact", type= "button" class= "nav-button" id = "three">Contact</a>
+<a href="http://joshuaverdejo.com/info", type= "button" class= "nav-button" id = "four">Home</a>
 </div>
 
   <head>
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/home.css"/>
   </head>
 
   <body class="dark-theme">
-    <h1 class = "name">Joshua Verdejo</h1>
-    <p>My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</p>
+    <h1 class = "page-text">My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</h1>
 
-    
   
 <button class="theme-btn"> <span class="theme-type"></span> </button>
+
     <!-- External JavaScript File -->
     <script src="/js/main.js"></script>
 </body>
