Home page navigation

--- a/home.html
+++ b/home.html
@@ -2,12 +2,7 @@
 <html>
 
 
-<div>
-<a href="http://joshuaverdejo.com/info", type= "button" class= "nav-button" id = "one">About</a>
-<a href="http://joshuaverdejo.com/projects", type= "button" class= "nav-button" id = "two">Projects</a>
-<a href="http://joshuaverdejo.com/contact", type= "button" class= "nav-button" id = "three">Contact</a>
-<a href="http://joshuaverdejo.com/info", type= "button" class= "nav-button" id = "four">Home</a>
-</div>
+
 
   <head>
     <title>Home</title>
@@ -15,9 +10,35 @@
     <link rel="stylesheet" href="css/home.css"/>
   </head>
 
-  <body class="dark-theme">
-    <h1 class = "page-text">My name is <strong>Josh Verdejo</strong>, I am a <strong>student</strong> at MIT pursuing <strong>Electrical Engineering</strong> and <strong>Computer Science</strong> degrees.</h1>
+<p>
+ 
+  
+<body class="dark-theme">
+<h1 class = "page-text">My name is 
 
+<strong class="pop1">Josh Verdejo, 
+<img class = "info-img popimg1" src='/css/kidme.jpg' alt=''>
+<div class = "caption"> This is me (as a kid)</div></strong> I am a 
+      
+<strong class="pop2">student at MIT
+<img class = "info-img popimg2" src='/css/mitacceptance.gif' alt=''>
+<div class = "caption"> Me getting accepted</div></strong> pursuing 
+      
+<strong class="pop3">Computer Science and Electrical Engineering 
+
+<img class = "info-img popimg3" src='/css/me.png' alt=''> 
+  <div class = "caption"> That's why I built this website</div></strong> degrees.</h1>
+</p>
+  
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn"></button>
+  <div class="dropdown-content">
+<a href="http://joshuaverdejo.com/info">About</a>
+<a href="http://joshuaverdejo.com/projects">Projects</a>
+<a href="http://joshuaverdejo.com/contact">Contact</a>
+  </div>
+</div>  
+   
   
 <button class="theme-btn"> <span class="theme-type"></span> </button>
 
