Home page navigation

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
     </div>
 
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn"></button>
+  <div class="dropdown-content">
+<a href="http://joshuaverdejo.com/info">About</a>
+<a href="http://joshuaverdejo.com/projects">Projects</a>
+<a href="http://joshuaverdejo.com/contact">Contact</a>
+  </div>
+</div> 
+
     <button class="theme-btn"> <span class="theme-type"></span> </button>
 
     <!-- External JavaScript File -->
