--- a/home.html
+++ b/home.html
@@ -22,12 +22,12 @@
       
 <strong class="pop2">student at MIT
 <img class = "info-img popimg2" src='/css/mitacceptance.gif' alt=''>
-<div class = "caption"> Me getting accepted</div></strong> pursuing 
+<div class = "caption"> Me getting accepted (as a teen)</div></strong> pursuing 
       
 <strong class="pop3">Computer Science and Electrical Engineering 
 
 <img class = "info-img popimg3" src='/css/me.png' alt=''> 
-  <div class = "caption"> That's why I built this website</div></strong> degrees.</h1>
+  <div class = "caption"> This is me (now)</div></strong> degrees.</h1>
 </p>
   
 <div class="dropdown" style="float:right;">
