--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
-            <h1 class = "detail-text" href="http://joshuaverdejo.com/info">(currently under construction)</h1>  
+            <a class = "detail-text" href="http://joshuaverdejo.com/info">(site under construction)</a>  
         </div>
 
     </div>
