--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
-            <a class = "detail-text" href="http://joshuaverdejo.com/info">(site under construction)</a>  
+            <h1 class = "detail-text">(site under construction)</h1>  
         </div>
 
     </div>
@@ -27,9 +27,7 @@
 <div class="dropdown" style="float:right;">
   <button class="dropbtn"></button>
   <div class="dropdown-content">
-<a href="http://joshuaverdejo.com/info">About</a>
-<a href="http://joshuaverdejo.com/projects">Projects</a>
-<a href="http://joshuaverdejo.com/contact">Contact</a>
+<a href="http://joshuaverdejo.com/home">Home</a>
   </div>
 </div> 
 
