working on about and contact, getting rid of projects (temporarily)

--- a/info.html
+++ b/info.html
@@ -1,27 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <h2>
-<div>
-<a href="http://joshuaverdejo.com", type= "button", class="about_button title_button">Home</a>
-<a href="http://joshuaverdejo.com/projects", type= "button", class="projects_button title_button">Projects</a>
-<a href="http://joshuaverdejo.com/contact", type= "button", class="contact_button title_button">Contact</a>
-</h2>
-</div>
-    
+
   <head>
-    <title>JV: About</title>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <title>Home</title>
     <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/home.css"/>
   </head>
-  <body align = "center">
-    <h1>Joshua Verdejo</h1>
-<h4>
-    I am passionate about computer science as well as music.
-</h4>
 
-<div>
-   <a href="/css/VerdejoResume.pdf"><img src="/css/resumeIcon.png" width="150" height="150" alt="Resume">Resume</a>
-</div>
+<p>
+ 
+  
+<body class="dark-theme">
+<h1 class = "page-text">I am passionate about
 
-  </body>
+<strong class="pop1">music, coding, and helping others. 
+<img class = "info-img popimg1" src='/css/kidme.jpg' alt=''>
+<div class = "caption"> Favorite musician: Jay-Z <br/> Favorite language: Python <br/> Favorite charity: Feed My Starving Children</div></strong> Feel free to open
+      
+<a href = "https://drive.google.com/file/d/1A8Em2sAxqw-YFE_ZrS_l8kd7i0VSB5ug/view?usp=sharing" class="pop2">my resume 
+<img class = "info-img popimg2" src='/css/mitacceptance.gif' alt=''>
+<div class = "caption"> Click to view </div></a> to get a better look at what I do. 
+ </h1>
+</p>
+  
+<div class="dropdown" style="float:right;">
+  <button class="dropbtn"></button>
+  <div class="dropdown-content">
+<a href="http://joshuaverdejo.com/info">About</a>
+<a href="http://joshuaverdejo.com/projects">Projects</a>
+<a href="http://joshuaverdejo.com/contact">Contact</a>
+  </div>
+</div>  
+   
+  
+<button class="theme-btn"> <span class="theme-type"></span> </button>
+
+    <!-- External JavaScript File -->
+    <script src="/js/main.js"></script>
+</body>
 </html>
