fixing images/links

--- a/info.html
+++ b/info.html
@@ -14,11 +14,9 @@
 <h1 class = "page-text">I am passionate about
 
 <strong class="pop1">music, coding, and helping others. 
-<img class = "info-img popimg1" src='/css/kidme.jpg' alt=''>
 <div class = "caption"> Favorite musician: Jay-Z <br/> Favorite language: Python <br/> Favorite charity: Feed My Starving Children</div></strong> Feel free to open
       
-<a href = "https://drive.google.com/file/d/1A8Em2sAxqw-YFE_ZrS_l8kd7i0VSB5ug/view?usp=sharing" class="pop2">my resume 
-<img class = "info-img popimg2" src='/css/mitacceptance.gif' alt=''>
+<a href = "https://drive.google.com/open?id=1URcluXoF-O2I-7OZY1Vje53GrkEPwe0y" class="pop2">my resume 
 <div class = "caption"> Click to view </div></a> to get a better look at what I do. 
  </h1>
 </p>
@@ -27,7 +25,6 @@
   <button class="dropbtn"></button>
   <div class="dropdown-content">
 <a href="http://joshuaverdejo.com/info">About</a>
-<a href="http://joshuaverdejo.com/projects">Projects</a>
 <a href="http://joshuaverdejo.com/contact">Contact</a>
   </div>
 </div>  
