added desktop suggestion

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
-            <h1 class = "detail-text">(hover over square to begin)</h1>  
+            <h1 class = "detail-text">(hover over square to begin, best experience on computer)</h1>  
         </div>
 
     </div>
