trying to get more mobile support

--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       
 <strong class="pop2">student at MIT
 <img class = "info-img popimg2" src='/css/mitacceptance.gif' alt=''>
-<div class = "caption"> Me getting accepted (as a teen)</div></strong> pursuing 
+<div class = "caption"> Me getting accepted</div></strong> pursuing 
       
 <strong class="pop3">Computer Science and Electrical Engineering 
 
