working on home screen

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@ See a way to
   <button class="dropbtn"></button>
   <div class="dropdown-content">
 <a href="http://joshuaverdejo.com/info">About</a>
-<a href="http://joshuaverdejo.com/contact">Contact</a>
+<a href="http://joshuaverdejo.com/home">Home</a>
   </div>
 </div>  
    
