--- a/info.html
+++ b/info.html
@@ -16,7 +16,7 @@
 <strong class="pop1">music, coding, and helping others. 
 <div class = "caption"> Favorite musician: Jay-Z <br/> Favorite language: Python <br/> Favorite charity: Feed My Starving Children</div></strong> Feel free to open
       
-<a href = "https://drive.google.com/open?id=1URcluXoF-O2I-7OZY1Vje53GrkEPwe0y" class="pop2">my resume 
+<a href = "https://drive.google.com/file/d/1N4Cl8N2ka1Ttcb64jgERf5oaZNiZneQm/view?usp=sharing" class="pop2">my resume 
 <div class = "caption"> Click to view </div></a> to get a better look at what I do. 
  </h1>
 </p>
@@ -24,7 +24,7 @@
 <div class="dropdown" style="float:right;">
   <button class="dropbtn"></button>
   <div class="dropdown-content">
-<a href="http://joshuaverdejo.com/info">About</a>
+<a href="http://joshuaverdejo.com/home">Home</a>
 <a href="http://joshuaverdejo.com/contact">Contact</a>
   </div>
 </div>  
