pushing projects page v1

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Home</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="css/main.css"/>
     <link rel="stylesheet" href="css/home.css"/>
   </head>
@@ -29,6 +29,7 @@ See a way to
   <button class="dropbtn"></button>
   <div class="dropdown-content">
 <a href="http://joshuaverdejo.com/info">About</a>
+<a href="http://joshuaverdejo.com/projects">Projects</a>
 <a href="http://joshuaverdejo.com/home">Home</a>
   </div>
 </div>  
