--- a/home.html
+++ b/home.html
@@ -14,16 +14,16 @@
 <h1 class = "page-text">My name is 
 
 <strong class="pop1">Josh Verdejo, 
-<img class = "info-img popimg1" src='/css/kidme.jpg' alt=''>
+<img class = "info-img popimg1" src='/assets/photos/kidme.jpg' alt=''>
 <div class = "caption"> This is me (as a kid)</div></strong> I am a 
       
 <strong class="pop2">student at MIT
-<img class = "info-img popimg2" src='/css/mitacceptance.gif' alt=''>
+<img class = "info-img popimg2" src='/assets/photos/mitacceptance.gif' alt=''>
 <div class = "caption"> Me getting accepted</div></strong> pursuing 
       
 <strong class="pop3">Computer Science and Electrical Engineering 
 
-<img class = "info-img popimg3" src='/css/me.png' alt=''> 
+<img class = "info-img popimg3" src='/assets/photos/me.png' alt=''> 
   <div class = "caption"> This is me (now)</div></strong> degrees.</h1>
 </p>
   
@@ -31,6 +31,7 @@
   <button class="dropbtn"></button>
   <div class="dropdown-content">
 <a href="http://joshuaverdejo.com/info">About</a>
+<a href="http://joshuaverdejo.com/projects">Projects</a>
 <a href="http://joshuaverdejo.com/contact">Contact</a>
   </div>
 </div>  
