--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Personal Site</title>
+    <title>Josh Verdejo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css"/>    
     <link rel="stylesheet" href="css/home.css"/>
@@ -15,7 +15,7 @@
         <div class="video-foreground">
 
             <video autoplay loop muted playsinline>
-  				<source src="/css/VidUniverse.mp4" type="video/mp4">
+  				<source src="/assets/videos/VidUniverse.mp4" type="video/mp4">
 			</video>
 
             <h1 class="knockout-text">joshua verdejo</h1>
